build: android AndroidManifest.xml - http connection

--- a/web_view/android/app/src/main/AndroidManifest.xml
+++ b/web_view/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.web_view">
+    <users-permission android:name="android.permission.INTERNET"/>
+
    <application
         android:label="web_view"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:userCleartextTraffic="true">
         <activity
             android:name=".MainActivity"
             android:exported="true"
