--- a/my_video_player/ios/Runner/Info.plist
+++ b/my_video_player/ios/Runner/Info.plist
@@ -48,8 +48,8 @@
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>앨범에 접근하기 위해 권한을 요구합니다.</string>
-	<key>NSCameraUsageDescription</key>
+	<string>카메라에 접근하기 위해 권한을 요구합니다.</string>
+    <key>NSCameraUsageDescription</key>
 	<string>카메라에 접근하기 위해 권한을 요구합니다.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>마이크에 접근하기 위해 권한을 요구합니다.</string>
